# DominionOS

./: .dockerignore  .gitignore  AI_DEVELOPMENT_GUIDELINES.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  FEATURES.md  HARDWARE.md  INFRASTRUCTURE.md  LICENSE.md  PROJECT_STATUS.md  README.md  README_RELEASE.md  RELEASE_CHECKLIST.md  make-bootable-usb.ps1  qemu-common.ps1  read-bootlog.ps1  read-usb-results.ps1  run-baremetal.ps1  run-bench.ps1  run-docker.ps1  run-docker.sh  run-test.ps1  run-validate.ps1  run.ps1  scan-usb-log.ps1
.github/workflows/: ci.yml
bench/: README.md
bench/host-ml/: Cargo.toml  compare-live.ps1  compare.ps1
bench/host-ml/.cargo/: config.toml
bench/host-ml/src/: main.rs
bench/linux/: run-linux-bench.sh
boot/: Cargo.toml
boot/src/: main.rs
docs/: AI_AGENT_MANUAL.md  DominionOS.md  README.md  architecture.md  implementation-status.md  subsystem-manifest.json
dominion-core/: Cargo.toml
dominion-core/src/: a11y.rs  agent.rs  airlock.rs  amnesic.rs  anim.rs  anon.rs  appkit.rs  arch.rs  attest.rs  atw.rs  audio.rs  backup.rs  bft.rs  browser.rs  browserapp.rs  bytes.rs  capability.rs  capshim.rs  chacha.rs  cheri.rs  codec.rs  coldcomp.rs  compat.rs  compliance.rs  compose.rs  compositor_svc.rs  confidential.rs  conformance.rs  consent.rs  consistency.rs  content_store.rs  credential.rs  crypto.rs  cryptoct.rs  css.rs  ctx.rs  dash.rs  datatypes.rs  dcg.rs  defense.rs  (+151 more)
dominion-core/src/codec/: media.rs
dominion-core/src/foreign/: exec_tests.rs
dominion-core/src/lang/: ast.rs  bytecode.rs  compile.rs  emit.rs  interp.rs  jit.rs  lexer.rs  mod.rs  parser.rs  value.rs  vm.rs
dominion-core/src/ml/: gpu.rs
dominion-core/src/nn/: attention.rs  embed.rs  ffn.rs  mod.rs  model.rs  norm.rs  recurrent.rs  rope.rs  sample.rs  tokenizer.rs
dominion-core/src/nn/arch/: cnn.rs  mod.rs  moe.rs  transformer.rs
dominion-core/src/nn/testdata/: fixture.aem  fixture_expected.json
dominion-core/src/packaging/: depot.rs
dominion-core/src/personality/: appchannel.rs  applaunch.rs  driverload.rs  x86mini.rs
dominion-core/src/polyglot/: ast.rs  lexer.rs  parser.rs  runtime.rs  tests.rs
dominion-core/tests/: examples.rs  just_works_integration.rs
examples/: 01_hello.aeth  02_variables.aeth  03_arithmetic.aeth  04_strings.aeth  05_vectors.aeth  06_conditionals.aeth  07_loops.aeth  08_functions.aeth  09_pipes_and_map.aeth  10_objects.aeth  11_cells_and_caps.aeth  12_decorators.aeth  13_numerics.aeth  14_ml_tensors.aeth  15_content_addressing.aeth  16_linear_affine.aeth  17_data_pipeline.aeth  18_state_machine.aeth  19_numeric_solver.aeth  20_sorting_algorithms.aeth  21_polyglot_bridge.aeth  22_crypto_vault.aeth  23_advanced_ml.aeth  24_driver_and_io.aeth  25_full_os_program.aeth  26_functional_builtins.aeth  27_polyglot_bridge.aeth
kernel/: Cargo.toml  x86_64-dominion-fma.json  x86_64-dominion.json
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  ahci.rs  allocator.rs  bench.rs  block.rs  bootlog.rs  desktop.rs  dma.rs  e1000.rs  entropy.rs  gdt.rs  gfx.rs  hwreport.rs  interrupts.rs  keyboard.rs  lib.rs  loader.rs  main.rs  memory.rs  mouse.rs  netif.rs  nvme.rs  pci.rs  rtc.rs  rtl8139.rs  selftest.rs  serial.rs  shell.rs  smp.rs  threadpool.rs  usbhid.rs  usbmsc.rs  vga_buffer.rs  virtio.rs  webnet.rs  xhci.rs
tools/ai/: .env.example  README.md  bench_pytorch.py
tools/ai/convert/: aem.py  convert_hf.py
tools/ai/datasets/: DATASET-SPEC.md
tools/ai/ground-truth/: capability-registry.json  dominion-grammar.ebnf
tools/ai/rustref/: Cargo.toml
tools/ai/rustref/src/: main.rs
tools/ai/verify/: forward_qwen.py  make_fixture.py
